assets/styles/octogram.config.css
:root {
  --appnamecolor: #6a7ed6;
  --background: #151e27;

  --header-bg: #283157;
  --header-height: 60px;
  --header-back-size: 20px;
  --header-back-gap: 10px;
  --header-appicon-size: 30px;
  --header-actions-gap: 10px;
  --header-width-limit: min(90vw, 900px);

  --introduction-bg: #1d2733;
  --introduction-height: 75vh;
  --introduction-bottommargin: 40px;
  --introduction-shadow-height: 150px;
  --introduction-height-min: 800px;
  --introduction-width-limit: 1000px;
  --introduction-gap: 300px;
  --introduction-gap-mobile: 35px;
  --introduction-message-width-limit: 700px;
  --introduction-message-title: #FFFFFF;
  --introduction-message-description: #FFFFFF;
  --introduction-image-gap: 5px;
  --introduction-image-radius: 10px;
  --introduction-image-maxheight: 250px;
  --introduction-image-maxwidth: 150px;
  --introduction-image-active-maxheight: 600px;
  --introduction-image-active-maxwidth: 1000px;
  --introduction-image-active-mobile-maxheight: 500px;
  --introduction-image-pause: rgba(0, 0, 0, 0.5);
  --introduction-image-pause-size: 20px;
  --introduction-imageplaceholder-full-bg: rgba(21, 30, 39, 0.8);
  --introduction-imageplaceholder-full-text: #FFFFFF;
  --introduction-imageplaceholder-full-icon: 40px;
  --introduction-imageplaceholder-full-gap: 10px;
  --introduction-imageplaceholder-bottom-height: 80px;
  --introduction-imageplaceholder-bottom-gradient-start: transparent;
  --introduction-imageplaceholder-bottom-gradient-end: #000000;
  --introduction-imageplaceholder-bottom-text: #FFFFFF;
  --introduction-imageplaceholder-bottom-text-padding: 15px;

  --pointer-bg: #1d2733;
  --pointer-padding: 20px;
  --pointer-shadow-height: 50px;
  --pointer-bottommargin: 40px;
  --pointer-sticker-size: 200px;
  --pointer-title: #FFFFFF;
  --pointer-button-margintop: 10px;

  --dcstatus-bg: #1d2733;
  --dcstatus-descriptorgap-mobile: 5px;
  --dcstatus-title: #FFFFFF;
  --dcstatus-title-beta-bg: #FFFFFF;
  --dcstatus-title-beta-color: #000000;
  --dcstatus-title-beta-radius: 6px;
  --dcstatus-description: rgba(255, 255, 255, 0.8);
  --dcstatus-description-gap: 5px;
  --dcstatus-description-progress-size: 20px;
  --dcstatus-description-progress-color: rgba(255, 255, 255, 0.8);
  --dcstatus-description-progress-width: 3px;
  --dcstatus-bottommargin: 50px;
  --dcstatus-width-limit: min(95vw, 1400px);
  --dcstatus-padding: 20px;
  --dcstatus-radius: 5px;
  --dcstatus-row-gap: 15px;
  --dcstatus-row-gap-lines: 17px;
  --dcstatus-row-name-color: #FFFFFF;
  --dcstatus-row-name-size: 17px;
  --dcstatus-row-ip-color: rgba(255, 255, 255, 0.5);
  --dcstatus-row-ip-size: 14px;
  --dcstatus-row-status-color-online: #69b972;
  --dcstatus-row-status-color-slow: #e0bd25;
  --dcstatus-row-status-color-offline: #c26266;
  --dcstatus-row-status-size: 14px;
  --dcstatus-column-status-size: 18px;
  --dcstatus-column-status-color-online: #69b972;
  --dcstatus-column-status-color-offline: #c26266;
  --dcstatus-column-ping: rgba(255, 255, 255, 0.8);
  --dcstatus-report-bg: #151e27;
  --dcstatus-report-text: #d9d9d9;
  --dcstatus-report-border: #565656;
  --dcstatus-report-radius: 10px;

  --features-title: #FFFFFF;
  --features-title-gap: 20px;
  --features-bottommargin: 30px;
  --features-list-width-limit: 1000px;
  --features-list-gap: 40px;
  --features-item-placeholder: min(80vw, 800px);
  --features-item-gap: 15px;
  --features-item-image-size: 300px;
  --features-item-text-color: #FFFFFF;
  --features-item-extra-bg: #252d3a;
  --features-item-extra-text: #FFFFFF;
  --features-item-extra-radius: 10px;
  --features-item-extra-padding: 15px;

  --buttons-textcolor: #FFFFFF;
  --buttons-hoverbg: rgba(255, 255, 255, 0.1);
  --buttons-activebg: rgba(255, 255, 255, 0.05);
  --buttons-accent-bg: #6a7ed6;
  --buttons-accent-text: #FFFFFF;
  --buttons-padding: 8px;
  --buttons-big-paddingblock: 10px;
  --buttons-radius: 5px;

  --downloads-bg: #6a7ed63d;
  --downloads-title: #FFFFFF;
  --downloads-description: #FFFFFF;
  --downloads-bottommargin: 50px;
  --downloads-width-limit: min(95vw, 1400px);
  --downloads-padding: 30px;
  --downloads-radius: 5px;
  --downloads-gap: 20px;
  --downloads-files-width: 265px;
  --downloads-select-paddingblock: 10px;
  --downloads-select-bottommargin: 6px;
  --downloads-separator: rgba(255, 255, 255, 0.6);
  --downloads-stores-bg: rgba(106, 124, 214, 0.2);
  --downloads-stores-gap: 20px;
  --downloads-stores-gap-mobile: 10px;
  --downloads-stores-primary-apkmirror: #f76912;
  --downloads-stores-primary-apkpure: #005d52;
  --downloads-stores-primary-appcenter: #4f1428;
  --downloads-stores-primary-playstore: #0e0e0e;
  --downloads-stores-length-apkmirror: 156.2px;
  --downloads-stores-length-apkpure: 129.61px;
  --downloads-stores-length-appcenter: 166.19px;
  --downloads-stores-length-playstore: 147.14px;
  --downloads-stores-text: #FFFFFF;
  --downloads-stores-description: rgba(255, 255, 255, 0.95);
  --downloads-stores-store-gap: 10px;
  --downloads-stores-store-gap-mobile: 20px;

  --footer-bg: #252d3a;
  --footer-text: #FFFFFF;
  --footer-text-link: #6a7ed6;
  --footer-height: 60px;
  --footer-shadow-height: 20px;

  --advantages-bg: #252d3a;
  --advantages-bottommargin: 50px;
  --advantages-shadow-height: 20px;
  --advantages-paddingblock: 40px;
  --advantages-message-title: #FFFFFF;
  --advantages-message-description: #FFFFFF;
  --advantages-message-gap: 30px;
  --advantages-list-gap: 20px;
  --advantages-list-width-limit: 1400px;
  --advantages-list-separator-color: rgba(255, 255, 255, 0.5);
  --advantages-list-separator-height: 270px;
  --advantages-list-item-width-limit: 270px;
  --advantages-list-item-gap: 30px;
  --advantages-list-item-gap-mobile: 20px;
  --advantages-list-item-image-size: 230px;
  --advantages-list-item-title-color: #FFFFFF;

  --error-message-gap: 20px;
  --error-message-title: #FFFFFF;
  --error-message-description: #FFFFFF;
  --error-message-octo-size: 25px;
  --error-message-octo-gap: 7.5px;

  --animations-duration: 0.5s;
  --icons-transform: invert(1);
}

